Pagina de edicao entra em cena
- Motiro ainda nao eh capaz de traduzir codigo wiki em HTML
- Nao hah pagina padrao a ser mostrada quando nada foi escrito ainda
- A pagina de edicao eh uma farsa >:-) nada que voce edita nela eh salvo em
  lugar nenhum

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@199 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/_editbar.rhtml
+++ b/app/views/root/_editbar.rhtml
@@ -1,6 +1,9 @@
 <div class='editbar'>
   <% if @session[:user] then%>
-      <a href="#">Editar</a>
+      <%= link_to( 'Editar',
+                   { :controller => 'wiki',
+                     :action => 'edit',
+                     :page => 'MainPage' } )%>
   <% else %>
       <span class='disabled'>Editar (identifique-se, por favor)</span>
   <% end %>
