--- a/app/views/root/_header.rhtml
+++ b/app/views/root/_header.rhtml
@@ -16,7 +16,10 @@
                    size="12" />
           </td>
           <td>
-            <input type="submit" name="login" value="Login &#187;" />
+            <input class='button'
+                   type="submit"
+                   name="login"
+                   value="Login &#187;" />
           </td>
         </tr>
       </table>
