Agora salvando alteracoes
- Ainda falta exibir pagina padrao do tipo 'Escreva sua descricao aqui' para
  novas instalacoes do Motiro

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@201 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/_editbar.rhtml
+++ b/app/views/wiki/_editbar.rhtml
@@ -3,7 +3,7 @@
       <%= link_to( 'Editar',
                    { :controller => 'wiki',
                      :action => 'edit',
-                     :page => 'MainPage' } )%>
+                     :page => @page.name } )%>
   <% else %>
       <span class='disabled'>Editar (identifique-se, por favor)</span>
   <% end %>
