--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -30,34 +30,9 @@
       </div>
       <div id="description" class="window">
         <div class = "inner">
-          <div>
-            <p>
-              <h1>Motiro</h1>
-            </p>
-            <p>
-              Seja bem-vindo! Esta é a página principal do projeto Motiro.
-            </p>
-            <p>
-              Estamos tentando construir um portal para reunir diversas
-              aplicações de apoio e controle ao desenvolvimento de software.
-              Alguns exemplos são aplicações de gerêcia de configuração,
-              controle de bugs e listas de discussão. O papel do portal é
-              fazer com que elas estejam integradas e funcionando de forma 
-              ubíqua, permitindo ao desenvolvedor ter acesso a diversos tipos
-              de informação sobre seu projeto em um único local.
-            </p>
-            <p>
-              Confuso? Dê uma olhada em volta. Esta página é um exemplo de 
-              portal Motiro em funcionamento.
-            </p>
-            <p>
-              Interessado? Use esta página para conseguir mais informações. Se
-              quiser nos contactar, estamos todos reunidos discutindo no grupo
-              <a href="http://groups.google.com/group/motiro">motiro@googlegroups.com</a>.
-              Junte-se ao mutirão!
-            </p>
-          </div>
-          <%= render :partial => 'editbar' %>
+          <%= render_component(:controller => 'wiki',
+                               :action =>  'show',
+                               :params => {:page => 'MainPage'}) %>
         </div>
       </div>
     <div class="channel" id="svn">
