--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -24,14 +24,15 @@
     <div id="content">
       <div id="editor" class="window">
         <div class = "inner">
-  <input class="button"
-         type="submit"
-         name="btnSave"
-         value="Salvar modificações" />
-  <input class="button" type="submit" name="btnCancel" value="Cancelar" />
-<textarea id="txaEditor" name="savetext" rows="20" style="width: 100%;">
-<%= @page_text -%>
-</textarea>
+          <%= start_form_tag :action => 'save' %>
+            <%= submit_tag 'Salvar modificações', :class => 'button',
+                                                  :name => 'btnSave' %>
+            <%= submit_tag 'Cancelar', :class => 'button',
+                                       :name => 'btnCancel' %>
+            <%= hidden_field 'page', 'name' %>
+            <%= text_area 'page', 'text', :id => 'txaEditor',
+                                          :rows => '30' %>
+          <%= end_form_tag %>
         </div>
       </div>
     <div id="footer">
