Referencia no editor de paginas
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@205 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -35,6 +35,16 @@
           <%= end_form_tag %>
         </div>
       </div>
+      <div class='window'>
+        <div class='inner'>
+          <p><h2>Referência</h2></p>
+          <p>
+            <b>Título:</b> <code>= <i>Título</i> =</code><br/>
+            <b>Link:</b> <code>[<i>endereço</i> <i>rótulo</i>]</code>
+          </p>
+        </div>
+      </div>
+    </div>
     <div id="footer">
       <p>Motiro versão <%= MOTIRO_VERSION %></p>
     </div>
