Descricao agora bilingue
Para acessar a pagina em portugues:

http://thiagoarrais.no-ip.org:3000

em ingles

http://thiagoarrais.no-ip.org:3000/en

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@208 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -32,7 +32,8 @@
         <div class = "inner">
           <%= render_component(:controller => 'wiki',
                                :action =>  'show',
-                               :params => {:page => 'MainPage'}) %>
+                               :params => { :page => 'MainPage',
+                                            :locale => @locale }) %>
         </div>
       </div>
     <div class="channel" id="svn">
