--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -26,7 +26,13 @@
         <div id="notice"><%= @flash[:notice] %></div>
       <% end %>
       <div id='header'>
-        <%= render :partial => 'header' %>
+        <div style='float: right;'>
+          <a id='en' href='/en'>English</a> |
+          <a id='pt-BR' href='/pt-BR'>Português</a>
+        </div>
+        <div>
+          <%= render :partial => 'header' %>
+        </div>
       </div>
       <div id="description" class="window">
         <div class = "inner">
