Pagina principal traduzida
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@217 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/_header.rhtml
+++ b/app/views/root/_header.rhtml
@@ -2,8 +2,8 @@
     <%= start_form_tag :controller => 'account', :action=> 'login' %>
       <table>
         <tr>
-          <td><label for="user_login">Usuário</label></td>
-          <td><label for="user_password">Senha</label></td>
+          <td><label for="user_login"><%= 'User'.t -%></label></td>
+          <td><label for="user_password"><%= 'Password'.t -%></label></td>
           <td/>
         </tr>
         <tr>
