Idioma indicado na URL tem preferencia
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@224 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -45,12 +45,14 @@
     <div class="channel" id="svn">
       <%= render_component(:controller => 'report',
                            :action =>  'show',
-                           :params => {:reporter => 'subversion'}) %>
+                           :params => { :reporter => 'subversion',
+                                        :locale => @locale }) %>
     </div>
     <div class="channel" id="events">
       <%= render_component(:controller => 'report',
                            :action =>  'show',
-                           :params => {:reporter => 'events'}) %>
+                           :params => { :reporter => 'events',
+                                        :locale => @locale }) %>
     </div>
     <div id="footer">
       <p>Motiro <%= 'version'.t -%> <%= MOTIRO_VERSION -%></p>
