Traduzindo alguns termos esquecidos na pagina principal
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@233 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/_header.rhtml
+++ b/app/views/root/_header.rhtml
@@ -25,5 +25,5 @@
       </table>
     <%= end_form_tag %>
 <% else %>
-    Bem-vindo, <%= @session[:user].login -%>
+    <%= 'Welcome'.t -%>, <%= @session[:user].login -%>
 <% end %>
