--- a/app/views/report/subversion_detail.rhtml
+++ b/app/views/report/subversion_detail.rhtml
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>Motiro - Subversion - Revisão <%= @revision_id -%></title>
+    <title>Motiro - Subversion - <%= 'Revision'.t -%> <%= @revision_id -%></title>
     <%= stylesheet_link_tag "motiro", :media => "all" %>
     <script type="text/javascript" src="/javascripts/motiro.js"></script>
     <script type="text/javascript" src="/niftycube.js"></script>
@@ -19,7 +19,7 @@
     <div id="content">
       <div id="description" class="window">
         <div class="inner">
-          <h1>Revisão <%= @revision_id -%></h1>
+          <h1><%= 'Revision'.t -%> <%= @revision_id -%></h1>
 <% end %>
           <pre>
 <%= h(@headline.description) %>
