--- a/app/views/report/subversion_detail.rhtml
+++ b/app/views/report/subversion_detail.rhtml
@@ -18,6 +18,8 @@
   <body>
     <div id="content">
       <div id='header'>
+        <%# TODO almost the same code appears at the index page, remove the
+                 duplication %>
         <div style='float: right;'>
           <%= link_to 'English',
                       { :controller => 'report',
