Paginas principal e de detalhamento subversion unificadas
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@239 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/subversion_detail.rhtml
+++ b/app/views/report/subversion_detail.rhtml
@@ -1,25 +1,5 @@
+<% @title = "Motiro - Subversion - #{'Revision %s' / @revision_id}" %>
 <% if ! @partial then %>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>Motiro - Subversion - <%= 'Revision %s' / @revision_id -%></title>
-    <%= stylesheet_link_tag "motiro", :media => "all" %>
-    <script type="text/javascript" src="/javascripts/motiro.js"></script>
-    <script type="text/javascript" src="/niftycube.js"></script>
-    <script type="text/javascript">
-        window.onload=function(){
-            Nifty("div.window","big");
-            hideChanges();
-        }
-    </script>
-  </head>
-  <body>
-    <div id="content">
-      <div id='header'>
-        <%= render :partial => 'header' %>
-      </div>
       <div id="description" class="window">
         <div class="inner">
           <h1><%= 'Revision %s' / @revision_id -%></h1>
@@ -41,8 +21,5 @@
       <% @headline.changes.each do |change| %>
           <%= change.render_diff %>
       <% end %>
-    </div>
-  </body>
-</html>
 <% end %>
-    
+  
