--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -1,33 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-        "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>Motiro: <%= 'Welcome'.t -%></title>
-    <%= stylesheet_link_tag "motiro", :media => "all" %>
-    <style type="text/css">
-        div#svn div.channel-title{background: #E3A1C4}
-        div#svn div.channel-body-outer{background: #E3A1C4}
-        div#events div.channel-title{background: #FFBD00}
-        div#events div.channel-body-outer{background: #FFBD00}
-    </style>
-    <script type="text/javascript" src="niftycube.js"></script>
-    <script type="text/javascript">
-        window.onload=function(){
-            Nifty("div.channel-title","top,big");
-            Nifty("div.channel-body-outer","bottom,big");
-            Nifty("div.window","big");
-        }
-    </script>
-  </head>
-  <body>
-    <div id="content">
-      <% if @flash[:notice] -%>
-        <div id="notice"><%= @flash[:notice] %></div>
-      <% end %>
-      <div id='header'>
-        <%= render :partial => 'header' %>
-      </div>
+<% @title = "Motiro: #{'Welcome'.t}" %>
       <div id="description" class="window">
         <div class = "inner">
           <%= render_component(:controller => 'wiki',
@@ -51,6 +22,3 @@
     <div id="footer">
       <p>Motiro <%= 'version'.t -%> <%= MOTIRO_VERSION -%></p>
     </div>
-    </div>
-  </body>
-</html>
