--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -21,7 +21,7 @@
         <div id="notice"><%= @flash[:notice] %></div>
       <% end %>
       <div id='header'>
-        <%= render :partial => 'header' %>
+        <%= render :partial => 'layouts/header' %>
       </div>
       <%= @content_for_layout %>
     </div>
