Pagina de detalhamento de eventos internacionalizada
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@242 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/events_detail.rhtml
+++ b/app/views/report/events_detail.rhtml
@@ -1,4 +1,4 @@
-<% @title = "Motiro - Evento" %>
+<% @title = "Motiro - #{'Event'.t}" %>
 <% if ! @partial then %>
       <div id="description" class="window">
         <div class="inner">
