--- a/app/views/events/_form.rhtml
+++ b/app/views/events/_form.rhtml
@@ -1,13 +1,13 @@
 <%= error_messages_for 'headline' %>
 
 <!--[form:headline]-->
-<p><label for="headline_title">Título</label><br/>
+<p><label for="headline_title"><%= 'Summary'.t -%></label><br/>
 <%= text_field 'headline', 'title'  %></p>
 
-<p><label for="headline_happened_at">Data</label><br/>
+<p><label for="headline_happened_at"><%= 'Date'.t -%></label><br/>
 <%= date_select 'headline', 'happened_at'  %></p>
 
-<p><label for="headline_description">Descrição</label><br/>
+<p><label for="headline_description"><%= 'Description'.t -%></label><br/>
 <%= text_area 'headline', 'description'  %></p>
 <!--[eoform:headline]-->
 
