--- a/app/views/events/new.rhtml
+++ b/app/views/events/new.rhtml
@@ -1,6 +1,6 @@
-<h1>Novo evento</h1>
+<h1><%= 'New event'.t -%></h1>
 
 <%= start_form_tag :action => 'create' %>
   <%= render :partial => 'form' %>
-  <%= submit_tag "Criar" %>
+  <%= submit_tag 'Create'.t %>
 <%= end_form_tag %>
