--- a/app/views/layouts/events.rhtml
+++ b/app/views/layouts/events.rhtml
@@ -3,12 +3,11 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>Motiro: Eventos</title>
+    <title>Motiro - <%= 'Events'.t -%></title>
     <%= stylesheet_link_tag "motiro", :media => "all" %>
   </head>
   
   <body>
 <%= @content_for_layout %>
-
-</body>
+  </body>
 </html>
