Pagina de edicao wiki internacionalizada
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@244 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -24,6 +24,9 @@
         <%= render :partial => 'layouts/header' %>
       </div>
       <%= @content_for_layout %>
+      <div id="footer">
+        <p>Motiro <%= 'version'.t -%> <%= MOTIRO_VERSION -%></p>
+      </div>
     </div>
   </body>
 </html>
