Rascunho inicial dos tempos relativos
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@247 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -20,7 +20,7 @@
       <br/>
       <font size="-1">
         <i><%= h(headline.author) %></i>
-        <%= h(headline.happened_at) %>
+        (<%= headline.relative_to_now %>)
       </font>
       <hr/>
     </p>
