Traducao de resumos de comentarios de commit na pagina principal funcionando
--- en ----------------------------

Now translating commit comment summaries on the main page

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@254 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -12,7 +12,7 @@
   <div class='inner'>
 <% @headlines.each do |headline|%>
     <p>
-      <%= link_to( h(headline.title),
+      <%= link_to( h(headline.title(Translator.for(@locale))),
                    { :controller => 'report',
                      :action => 'show',
                      :reporter => @name,
