Selects appropriate translation on commit details page
--- pt-br -----------

Traducao apropriada selecionada na pagina de detalhamento de commit


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@256 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/subversion_detail.rhtml
+++ b/app/views/report/subversion_detail.rhtml
@@ -5,7 +5,7 @@
           <h1><%= 'Revision %s' / @revision_id -%></h1>
 <% end %>
           <pre>
-<%= h(@headline.description) %>
+<%= h(@headline.description(Translator.for(@locale))) %>
           </pre>
           <div id="summary">
             <% @headline.changes.each do |change| %>
