Subversion RSS feed gets translated
--- pt-br --------------

Feed RSS Subversion traduzido



git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@260 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -3,7 +3,8 @@
                { :controller => 'report',
                  :action => 'show',
                  :reporter => @name,
-                 :format => 'rss' },
+                 :format => 'rss',
+                 :locale => @locale },
                :class => 'feed' )
   %>
   <p><%= h(@title) %></p>
