Restructuring the event and wiki page edit views to eliminate duplicate code
I still don't think this is the best solution. There is still some
duplication on the application and wiki_edit layouts, although it 
is minimal. I would still prefer a cascading layout approach, but
it seems like Rails doesn't like that.

--- pt-br --------------

Reestruracao das paginas de edicao wiki e de eventos
para eliminar codigo duplicado

Ainda nao acho que esta seja a melhor solucao. Ainda ha duplicacao
nos layouts application e wiki_edit, apesar de ser minima (essas coisas
tendem a fugir do controle rapidamente). Eu ainda preferiria uma
abordagem baseada em layouts, mas parece que Rails nao gosta disso.

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@265 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/events/new.rhtml
+++ b/app/views/events/new.rhtml
@@ -1,13 +1,7 @@
-<% @title = 'Motiro - ' + 'Events'.t %>
-<div id="editor" class="window">
-  <div class = "inner">
-    <%= start_form_tag :action => 'create' %>
-      <%= submit_tag 'Save modifications'.t, :class => 'button',
-                                            :name => 'btnSave' %>
-      <%= submit_tag 'Discard'.t, :class => 'button',
-                                 :name => 'btnDiscard' %>
-      <%= text_area 'headline', 'description', :id => 'txaEditor',
-                                               :rows => '30' %>
+<% @title = 'Motiro - ' + 'Events'.t
+   @action = 'create'
+   @destination = { :name => 'headline', :attr => 'description' }
+   @after_editor_content = Proc.new do %>
       <p style="float: left; padding-right: 2em;">
         <label for="headline_happened_at"><%= 'Date'.t -%>:</label>
         <%= date_select 'headline', 'happened_at'  %>
@@ -20,15 +14,4 @@
         </p>
       </div>
       <div style="height: 0; clear: left;">&nbsp;</div>
-    <%= end_form_tag %>
-  </div>
-</div>
-<div class='window'>
-  <div class='inner'>
-    <p><h2><%= 'Quick reference'.t -%></h2></p>
-    <p>
-      <b><%= 'Title'.t -%>:</b> <code>= <i><%= 'Title'.t -%></i> =</code><br/>
-      <b><%= 'Link'.t -%>:</b> <code>[<i><%= 'address'.t -%></i> <i><%= 'label'.t -%></i>]</code>
-    </p>
-  </div>
-</div>
+<% end %>
