--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -1,22 +1,5 @@
-      <div id="editor" class="window">
-        <div class = "inner">
-          <%= start_form_tag :action => 'save' %>
-            <%= submit_tag 'Save modifications'.t, :class => 'button',
-                                                  :name => 'btnSave' %>
-            <%= submit_tag 'Discard'.t, :class => 'button',
-                                       :name => 'btnDiscard' %>
-            <%= hidden_field 'page', 'name' %>
-            <%= text_area 'page', 'text', :id => 'txaEditor',
-                                          :rows => '30' %>
-          <%= end_form_tag %>
-        </div>
-      </div>
-      <div class='window'>
-        <div class='inner'>
-          <p><h2><%= 'Quick reference'.t -%></h2></p>
-          <p>
-            <b><%= 'Title'.t -%>:</b> <code>= <i><%= 'Title'.t -%></i> =</code><br/>
-            <b><%= 'Link'.t -%>:</b> <code>[<i><%= 'address'.t -%></i> <i><%= 'label'.t -%></i>]</code>
-          </p>
-        </div>
-      </div>
+<% @action = 'save'
+   @destination = { :name => 'page', :attr => 'text' }
+   @before_editor_content = Proc.new do %>
+<%= hidden_field 'page', 'name' %>
+<%end%>
