Translation on the event details page
--- pt-br -----------

Traducao na pagina de detalhamento de eventos

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@266 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/events_detail.rhtml
+++ b/app/views/report/events_detail.rhtml
@@ -2,10 +2,10 @@
 <% if ! @partial then %>
       <div id="description" class="window">
         <div class="inner">
-          <h1><%= h(@headline.title) -%></h1>
+          <h1><%= h(@headline.title(Translator.for(@locale))) -%></h1>
 <% end %>
           <pre>
-<%= h(@headline.description) %>
+<%= h(@headline.description(Translator.for(@locale))) %>
           </pre>
 <% if ! @partial then %>
         </div>
