Event details page formatted as wiki
--- pt-br -----------

Pagina de detalhamento de eventos formatada como wiki

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@267 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/events_detail.rhtml
+++ b/app/views/report/events_detail.rhtml
@@ -4,9 +4,9 @@
         <div class="inner">
           <h1><%= h(@headline.title(Translator.for(@locale))) -%></h1>
 <% end %>
-          <pre>
-<%= h(@headline.description(Translator.for(@locale))) %>
-          </pre>
+<%= page = Page.new
+    page.text = @headline.description(Translator.for(@locale))
+    page.render_html %>
 <% if ! @partial then %>
         </div>
       </div>
