Subversion revision details page formatted as wiki
--- pt-br ------------

Pagina de detalhamento de revisao subversion formatada como wiki

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@268 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/events_detail.rhtml
+++ b/app/views/report/events_detail.rhtml
@@ -4,9 +4,8 @@
         <div class="inner">
           <h1><%= h(@headline.title(Translator.for(@locale))) -%></h1>
 <% end %>
-<%= page = Page.new
-    page.text = @headline.description(Translator.for(@locale))
-    page.render_html %>
+<%= Page.new(:text => @headline.description(Translator.for(@locale))).
+      render_html %>
 <% if ! @partial then %>
         </div>
       </div>
