Cleaning HTML output
--- pt-br ------------

Limpando o codigo HTML

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@271 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/layouts/wiki_edit.rhtml
+++ b/app/views/layouts/wiki_edit.rhtml
@@ -19,7 +19,7 @@
       </div>
       <div class='window'>
         <div class='inner'>
-          <p><h2><%= 'Quick reference'.t -%></h2></p>
+          <h2><%= 'Quick reference'.t -%></h2>
           <p>
             <b><%= 'Title'.t -%>:</b> <code>= <i><%= 'Title'.t -%></i> =</code><br/>
             <b><%= 'Link'.t -%>:</b> <code>[<i><%= 'address'.t -%></i> <i><%= 'label'.t -%></i>]</code>
