Removing some duplication introduced when activating the 'Discard' button (revision r274)
--- pt-br -----------

Removendo repeticao introduzida pela ativacao do botao 'Descartar' (revisao r274)

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@276 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -1,5 +1,4 @@
-<% @action = 'save'
-   @destination = { :name => 'page', :attr => 'text' }
+<% @destination = { :name => 'page', :attr => 'text' }
    @before_editor_content = Proc.new do %>
 <%= hidden_field 'page', 'name' %>
 <%end%>
