--- a/app/views/layouts/wiki_edit.rhtml
+++ b/app/views/layouts/wiki_edit.rhtml
@@ -1,7 +1,7 @@
 <%= render :partial => 'layouts/top' %>
       <div id="editor" class="window">
         <div class = "inner">
-          <%= start_form_tag :action => @action %>
+          <%= start_form_tag :action => 'save' %>
             <%= submit_tag 'Save modifications'.t, :class => 'button',
                                                   :name => 'btnSave' %>
             <%= submit_tag 'Discard'.t, :class => 'button',
