Events channel now showing a link to the addition page
The link sits on something similar to a window menubar
(on a desktop application)

--- pt-br -------------

Canal de eventos agora mostra um link para pagina de adicao

O link fica posicionado em algo parecido com uma barra de menu
de uma janela (em uma aplicacao desktop)



git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@277 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -11,6 +11,11 @@
 </div>
 <div class='channel-body-outer'>
   <div class='inner'>
+  <% if ! @toolbar.nil?  then %>
+    <div class='toolbar channel_toolbar'>
+      <%= render :partial => @toolbar -%>
+    </div> 
+  <% end %>
 <% @headlines.each do |headline|%>
     <p>
       <%= link_to( h(headline.title(Translator.for(@locale))),
