--- a/app/views/wiki/_editbar.rhtml
+++ b/app/views/wiki/_editbar.rhtml
@@ -1,4 +1,4 @@
-<div class='editbar'>
+<div class='toolbar editbar'>
   <% if @session[:user] then%>
       <%= link_to( 'Edit'.t,
                    { :controller => 'wiki',
