Started to generalize channel displaying
--- pt-br -----------

Comecei a generalizar a exibicao dos canais

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@290 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -7,15 +7,12 @@
                                             :locale => @locale }) %>
         </div>
       </div>
-    <div class="channel" id="svn">
+  <% ReporterFetcher.new.active_reporters.each do |reporter| %>
+    <div class="channel" id="<%= reporter.name -%>">
       <%= render_component(:controller => 'report',
                            :action =>  'show',
-                           :params => { :reporter => 'subversion',
+                           :params => { :reporter => reporter.name,
                                         :locale => @locale }) %>
     </div>
-    <div class="channel" id="events">
-      <%= render_component(:controller => 'report',
-                           :action =>  'show',
-                           :params => { :reporter => 'events',
-                                        :locale => @locale }) %>
-    </div>
+  <% end %>
+    
