Started to add access control to wiki pages
--- pt-br -----------------

Controle de acesso para paginas wiki iniciado

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@311 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/events/new.rhtml
+++ b/app/views/events/new.rhtml
@@ -1,6 +1,5 @@
 <% @title = 'Motiro - ' + 'Events'.t
-   @destination = { :name => 'headline', :attr => 'description' }
-   @after_editor_content = Proc.new do %>
+   @destination = { :name => 'headline', :attr => 'description' } %>
       <p style="float: left; padding-right: 2em;">
         <label for="headline_happened_at"><%= 'Date'.t -%>:</label>
         <%= date_select 'headline', 'happened_at'  %>
@@ -13,4 +12,3 @@
         </p>
       </div>
       <div style="height: 0; clear: left;">&nbsp;</div>
-<% end %>
