Fixed redirecting to index
Tests passing now. Also took the time to eliminate some duplication

--- pt-br --------------------

Conserto do redirectionamento para a index

Testes passando. Aproveitei tambem para eliminar repeticao



git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@313 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -3,7 +3,7 @@
         <div class = "inner">
           <%= render_component(:controller => 'wiki',
                                :action =>  'show',
-                               :params => { :page => 'MainPage',
+                               :params => { :page_name => 'MainPage',
                                             :locale => @locale }) %>
         </div>
       </div>
