--- a/app/views/wiki/_editbar.rhtml
+++ b/app/views/wiki/_editbar.rhtml
@@ -15,6 +15,6 @@
       <%= link_to( 'Edit'.t,
                    { :controller => 'wiki',
                      :action => 'edit',
-                     :page => @page.name } )%>
+                     :page_name => @page.name } )%>
   <% end %>
 </div>
